# kafka-tools

./: main.py  pyproject.toml
.cursor/rules/: backend.yaml  common.mdc
